[gd_scene load_steps=7 format=2]

[ext_resource path="res://Nodes/Characters/GenericCharacter.tscn" type="PackedScene" id=1]
[ext_resource path="res://Nodes/Characters/Enemies/AirShooterH.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/Enemies/AirShooterH/adler.png.png" type="Texture" id=3]
[ext_resource path="res://Nodes/Combat/genericShooter.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "die",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "move",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "shoot",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21.0529, 10.397 )

[node name="AirShooterH" type="Node2D"]

[node name="GenericCharacter" parent="." groups=[
"enemy",
] instance=ExtResource( 1 )]
collision_layer = 4
script = ExtResource( 2 )

[node name="AnimatedSprite" parent="GenericCharacter" index="0"]
scale = Vector2( 0.2, 0.05 )
frames = SubResource( 1 )
animation = "move"

[node name="CollisionShape2D" parent="GenericCharacter" index="1"]
shape = SubResource( 2 )

[node name="FreeDeadNode" type="Timer" parent="GenericCharacter"]
one_shot = true

[node name="Shooter" type="Node2D" parent="GenericCharacter"]
script = ExtResource( 4 )

[node name="Shoot" type="Timer" parent="GenericCharacter"]
autostart = true

[connection signal="timeout" from="GenericCharacter/FreeDeadNode" to="GenericCharacter" method="_on_FreeDeadNode_timeout"]
[connection signal="timeout" from="GenericCharacter/Shoot" to="GenericCharacter" method="_on_Shoot_timeout"]

[editable path="GenericCharacter"]
